Sat Jun  9 19:43:25 EEST 2007  Pekka Riikonen <priikone@silcnet.org>

	* Fixed unix connecting failure to return error code correctly.
	  Affected file is lib/silcutil/unix/silcunixnet.c.

Fri Jun  8 23:32:33 EEST 2007  Pekka Riikonen <priikone@silcnet.org>

	* Fixed SKE timeout double free crash.  Affected file is
	  lib/silcske/silcske.c.

	* Fixed MIME multipart decoding buffer overflow.  Affected file
	  is lib/silcutil/silcmime.c.  Thanks to Matt Miller for patch.

Fri Jun  8 18:39:34 EEST 2007  Pekka Riikonen <priikone@silcnet.org>

	* Fixed connection auth protocol timeout crash.  Affected
	  file is lib/silcske/silconnauth.c.

	* Fixed FSM machine finishing to check for existing threads
	  at the final free callback to allow time for the threads to
	  finish.  Affected file lib/silcutil/silcfsm.c.

Thu Jun  7 21:25:31 EEST 2007  Pekka Riikonen <priikone@silcnet.org>

	* Fixed silc_client_get_clients_local to check the nick's
	  server also if nick@server nickname string is given to the
	  function.  Affected file is lib/silcclient/client_entry.c.

Wed Jun  6 18:33:05 EEST 2007  Pekka Riikonen <priikone@silcnet.org>

	* Added notify callback to silc_schedule_init which can be used to 
	  set a notify callback for scheduler which is called when task is
	  added to scheduler or deleted from scheduler.  Affected file
	  is lib/silcutil/silcschedule.[ch].

	* Dispatch timeout tasks after dispatching FD tasks if the timeout
	  was very short.  Affected file is lib/silcutil/silcschedule.c.

	* Rewrote the SILC scheduler handling in SILC Client to not poll
	  every few msecs but to use the new notify callback.  Affected 
	  file is apps/irssi/src/silc/core/silc-core.c.

	* Fixed SFTP client library read buffer size which was too small.
	  Affected file is lib/silcsftp/sftp_client.c.

	* Fixed file transfer crash bug in /QUIT in SILC Client.  Close
	  the FTP sessions before quitting the client.  Affected file
	  is apps/irssi/src/silc/core/silc-servers.c.
